# personal-knowledge-base

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  architecture.drawio  docker-compose.yml  embedding_model.py  gemma3-1b-4bit.py  gemma3-1b-q4-gguf.py  gemma3-1b.py  gemma3-4b.py  gemma3.py  hello.py  knowledge_base_api.py  llm.Dockerfile  llm.py  log_config.py  opensearch_client.py  package-lock.json  package.json  pyproject.toml  pytest.ini  start_streamlit.sh  streamlit_app.py  test_app.py
.github/workflows/: ci.yml
images/: architecture.drawio
mcp-server/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
mcp-server/src/: MyMcp.ts  index.ts
