[project]
name = "personal-knowledgebase-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "llama-cpp-python>=0.3.9",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "torch==2.7.1",
    "transformers==4.50.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "opensearch-py==2.8.0",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "sentencepiece>=0.2.0",
    "huggingface-hub[cli]>=0.32.4",
    "openai>=1.0.0",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "pre-commit==3.4.0",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
