[project]
name = "personal-knowledgebase-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "transformers==4.55.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "opensearch-py>=2.5.0",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "sentencepiece>=0.2.0",
    "openai>=1.0.0",
    "streamlit>=1.46.1",
    "accelerate>=1.10.0",
]

[project.optional-dependencies]
# GPU版PyTorchは以下を実行
# uv run pip3 install torch==2.8.0 torchvision==0.23.0 --index-url https://download.pytorch.org/whl/cu126

[dependency-groups]
dev = [
    "pre-commit==3.4.0",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
